tls/idc/argocd/argocd-server-http.live.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"traefik.ingress.kubernetes.io/router.entrypoints":"websecure","traefik.ingress.kubernetes.io/router.priority":"10","traefik.ingress.kubernetes.io/router.tls":"true"},"name":"argocd-server-http","namespace":"argocd"},"spec":{"ingressClassName":"traefik","rules":[{"host":"argocd.idc.brownrook.com","http":{"paths":[{"backend":{"service":{"name":"argocd-server","port":{"number":80}}},"path":"/","pathType":"Prefix [...]
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "10"
    traefik.ingress.kubernetes.io/router.tls: "true"
  creationTimestamp: "2026-03-10T10:16:37Z"
  generation: 2
  name: argocd-server-http
  namespace: argocd
  resourceVersion: "458516"
  uid: ea035cfc-e6be-4faf-b006-1329ce9b177b
spec:
  ingressClassName: traefik
  rules:
  - host: argocd.idc.brownrook.com
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: argocd.brownrook.net
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - argocd.idc.brownrook.com
    - argocd.brownrook.net
    secretName: argocd-server-tls
status:
  loadBalancer:
    ingress:
    - ip: 192.168.2.240
